kubernetes/namespace-better-u.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: better-u
  labels:
    name: better-u
