kubernetes/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/quarkus-version: 3.7.1
    app.quarkus.io/vcs-uri: git@github.com:xXTime-OnXx/better-u-backend.git
  labels:
    app.kubernetes.io/name: better-u-backend
    app.kubernetes.io/managed-by: quarkus
  name: better-u-backend
  namespace: better-u
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: better-u-backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/quarkus-version: 3.7.1
    app.quarkus.io/vcs-uri: git@github.com:xXTime-OnXx/better-u-backend.git
  labels:
    app.kubernetes.io/name: better-u-backend
    app.kubernetes.io/managed-by: quarkus
  name: better-u-backend
  namespace: better-u
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: better-u-backend
  template:
    metadata:
      annotations:
        app.quarkus.io/quarkus-version: 3.7.1
        app.quarkus.io/vcs-uri: git@github.com:xXTime-OnXx/better-u-backend.git
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/name: better-u-backend
      namespace: better-u
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: docker.io/tiimonschmid/better-u-backend:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: better-u-backend
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.quarkus.io/quarkus-version: 3.7.1
    app.quarkus.io/vcs-uri: git@github.com:xXTime-OnXx/better-u-backend.git
  labels:
    app.kubernetes.io/name: better-u-backend
    app.kubernetes.io/managed-by: quarkus
  name: better-u-backend
  namespace: better-u
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: better-u-backend
                port:
                  name: http
            path: /
            pathType: Prefix
